# LabOP

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h  matrix_task.c  matrix_task.h  matrix_test.c  matrix_test.h  test_task.c  test_task.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/void_vector/: void_vector.c  void_vector.h
string/: string_.c  string_.h  test_string.c  test_string.h
string/task/: task1.h  task10.h  task11.h  task12.h  task13.h  task14.h  task15.h  task16.h  task17.h  task18.h  task19.h  task2.h  task3.h  task4.h  task5.h  task6.h  task7.h  task8.h  task9.h
